# nam-to-rtneural

./: .gitignore  CMakeLists.txt  flake.nix
python/: train_min.py
